fixed z-indexes for header & navbar so that examples don't overlap header

--- a/source/assets/stylesheets/layout.sass
+++ b/source/assets/stylesheets/layout.sass
@@ -21,7 +21,7 @@ nav.navbar
   width: 80px
   height: 100%
   background: #222222
-  z-index: 1
+  z-index: 102
 
 header
   &.header
@@ -36,6 +36,7 @@ header
     position: fixed
     top: 0
     left: 0
+    z-index: 101
     padding-left: 120px
     h1
       font:
